# cloudStorageKursa4

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
core/: config.py  main.py
core/routers/: v1.py
filestorage/: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
filestorage/app/: main.py
filestorage/app/core/: constants.py  dependencies.py  exceptions.py  lifespan.py  settings.py
filestorage/app/s3/: models.py  routes.py  schemas.py  service.py
nginx/: nginx.conf
services/: main.py
services/models/: pydantic.py  pydantic_models.py  (+2 more)
src/: pyproject.toml
storage/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
user/: .env.example  .gitignore  Dockerfile
user_service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
user_service/app/: main.py  settings.py
user_service/app/auth/: constants.py  dependencies.py  exceptions.py  routes.py  schemas.py  security.py  service.py
user_service/app/auth/api/: __init__.py
user_service/app/auth/api/v1/: __init__.py  routes.py
user_service/app/auth/schemas/: __init__.py  proxy.py  token.py  user.py
user_service/app/auth/services/: __init__.py  auth.py  token.py
user_service/app/core/: __init__.py  constants.py  exception.py  lifespan.py  redis_config.py  settings.py
user_service/app/repository/: connection.py  crud.py  dependencies.py  redis.py
user_service/app/user/: exceptions.py  models.py  repository.py  routes.py  service.py
user_service/app/user/api/: __init__.py
user_service/app/user/api/v1/: __init__.py  routes.py
(+10 files in other folders)
