[project]
name = "user-service"
version = "0.1.0"
description = "kursa4 authorization for filestorage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pyjwt>=1.4.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.1",
    "tortoise-orm[asyncpg]>=1.1.6",
    "uvicorn>=0.41.0",
]
